JAX_WS-994 BUG 8160127 - [CR366144] [JAX-WS: CLIENTGEN] FAILS TO RESOLVE RELATIVE URLS IN THE WSDL WHEN